--- a/style.css
+++ b/style.css
@@ -15,19 +15,20 @@ body{
     /* width: 35rem;
     height: 15rem; */
     background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    /* justify-items: center;
+    align-items: center; */
+    place-items: center;
     flex-direction: column;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 10px;
     margin-top: 8rem;
-    padding: 4.5rem 3rem;
+    padding: 2rem 2rem 1.2rem 2rem;
+    position: relative;
 }
 
 .heading-div{
-    margin-bottom: 1.5rem;
-    /* margin-top: 1rem; */
+    margin-bottom: 2rem;
 }
 
 .heading{
@@ -38,8 +39,7 @@ body{
 
 .input-div{
     display: flex;
-    align-items: center;
-    
+    align-items: center; 
 }
 
 .input-field{
@@ -119,9 +119,29 @@ body{
     height: 1.25rem;
     display: grid;
     align-items: center;
-    text-align: center;
+    /* text-align: center; */
     font-size: 0.7rem;
     border-radius: 0.25rem;
     letter-spacing: 3px;
     text-transform: capitalize;
+}
+
+.clearBtn{
+    height: 2rem;
+    border: none;
+    background-color: white;
+    font-size: 0.9em;
+    color: hsl(360, 71%, 66%);
+    letter-spacing: 5px;
+    cursor: pointer;
+    transition: all 500ms ease;
+    margin-top: 1.2rem;
+}
+
+.clearBtn:hover{
+    color: hsl(360, 67%, 44%);
+}
+
+.hidden{
+    visibility: hidden;
 }
